--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-three": "^0.9.7",
+    "three": "^0.147.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
